--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "bundle/nerdtree"]
 	path = bundle/nerdtree
 	url = https://github.com/wycats/nerdtree.git
+[submodule "bundle/vim-rdoc"]
+	path = bundle/vim-rdoc
+	url = https://github.com/hallison/vim-rdoc.git
