Add textile bundle

--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "bundle/git-vim"]
 	path = bundle/git-vim
 	url = https://github.com/motemen/git-vim
+[submodule "bundle/textile.vim"]
+	path = bundle/textile.vim
+	url = https://github.com/zorab47/textile.vim
