Adding ruby-minitest & moving to vim-markdown

--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,12 @@
 [submodule "bundle/vim-screen"]
 	path = bundle/vim-screen
 	url = git://github.com/ervandew/screen.git
+[submodule "vim-ruby-minitest"]
+	path = vim-ruby-minitest
+	url = https://github.com/sunaku/vim-ruby-minitest
+[submodule "bundle/vim-ruby-minitest"]
+	path = bundle/vim-ruby-minitest
+	url = https://github.com/sunaku/vim-ruby-minitest
+[submodule "bundle/vim-markdown"]
+	path = bundle/vim-markdown
+	url = https://github.com/tpope/vim-markdown.git
