Add vim easy align

--- a/.gitmodules
+++ b/.gitmodules
@@ -82,3 +82,6 @@
 [submodule "bundle/vim-lldb"]
 	path = bundle/vim-lldb
 	url = https://github.com/gilligan/vim-lldb
+[submodule "bundle/vim-easy-align"]
+	path = bundle/vim-easy-align
+	url = https://github.com/junegunn/vim-easy-align.git
