--- a/.gitmodules
+++ b/.gitmodules
@@ -58,9 +58,6 @@
 [submodule "bundle/vim-markdown"]
 	path = pack/plugins/start/vim-markdown
 	url = https://github.com/tpope/vim-markdown.git
-[submodule "bundle/vim-flog"]
-	path = pack/plugins/start/vim-flog
-	url = https://github.com/fousa/vim-flog.git
 [submodule "bundle/vim-coverage"]
 	path = pack/plugins/start/vim-coverage
 	url = git@github.com:sentientmonkey/vim-coverage.git
@@ -124,6 +121,9 @@
 [submodule "bundle/vim-cargo"]
 	path = pack/plugins/start/vim-cargo
 	url = https://github.com/timonv/vim-cargo.git
-[submodule "bundle/nerdtree"]
+[submodule "pack/plugins/start/nerdtree"]
 	path = pack/plugins/start/nerdtree
-	url = git@github.com:scrooloose/nerdtree.git
+	url = https://github.com/scrooloose/nerdtree.git
+[submodule "pack/plugins/start/vim-flog"]
+	path = pack/plugins/start/vim-flog
+	url = https://github.com/fousa/vim-flog.git
